2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not needed anymore
	  as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs: Only prevent making a new selection using the
	  right mouse button if the selection is actually multiple (>= 2 persons).

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs, Chats/ChatView.cs: Implemented selecting multiple
	  person in a group chat. (closes trac bug #73)
	
	  Refactored person context menu commands to support a list of persons.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs, Chats/ChatView.cs: Initialize _Background and
	  _Foregroundcolor correctly using Nullable<Gdk.Color> as Gdk.Color.Zero
	  == color black.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-25  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Allow to close a chat using ctrl+w if it's not the session
	  chat (instead of checking for group chat only) (really closes trac bug
	  #67)
	
	  Updated copyright year.

2008-07-24  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs, Chats/ChatView.cs, Entry.cs: Use monospace bold as
	  default font.
	
	  Parse pango font description once.

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am: Distribute and install .exe.config files.

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Disabled splashscreen (we have no current logo anyhow).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, Main.cs, Frontend-GNOME.mdp, AssemblyInfo.cs.in,
	  AssemblyInfo.cs: Made debug logging an explicit command line parameter
	  (closes trac bug#59).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Pass "/window close" to IProtocolManager.CloseChat() instead of